// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalBand should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-band"
    >
      <rect
        class="rect"
        height="100"
        style="stroke: red; opacity: 0.3; fill: steelblue;"
        width="800"
        x="0"
        y="50"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`HorizontalBand should render correctly with no yStart 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-band"
    >
      <rect
        class="rect"
        height="100"
        style="stroke: red; opacity: 0.3; fill: steelblue;"
        width="800"
        x="0"
        y="100"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`HorizontalBand should render correctly with no yStop 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-band"
    >
      <rect
        class="rect"
        height="100"
        style="stroke: red; opacity: 0.3; fill: steelblue;"
        width="800"
        x="0"
        y="50"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`HorizontalBand should render nothing if missing scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-horizontal-band"
    />
  </svg>
</DocumentFragment>
`;
